# rapwords

./: .gitignore  LICENSE  README.md  RapWordsTalk.ipynb  pyproject.toml
Lyrics/ohhla.com/anonymous/2_pac/2pclypse/: homie.2pc.txt  soulja.2pc.txt  trapped.2pc.txt  violent.2pc.txt
Lyrics/ohhla.com/anonymous/2_pac/bestofp2/: dpefiend.2pc.txt
Lyrics/ohhla.com/anonymous/2_pac/better/: about_us.2pc.txt  changed.2pc.txt  dayz.2pc.txt  fame.2pc.txt  gh_star.2pc.txt  ltenight.2pc.txt  mamajust.2pc.txt  military.2pc.txt  pacslife.2pc.txt  thereugo.2pc.txt  tmansion.2pc.txt  ucancall.2pc.txt  who_do_u.2pc.txt  xchange.2pc.txt
Lyrics/ohhla.com/anonymous/2_pac/don_kill/: blasphem.2pc.txt  hailmary.2pc.txt  holdhead.2pc.txt  introbmb.2pc.txt  krazy.2pc.txt  meandmy.2pc.txt  toss_it.2pc.txt
Lyrics/ohhla.com/anonymous/2_pac/eyezonme/: all_bout.2pc.txt  azaridah.2pc.txt  cantcme.2pc.txt  checkout.2pc.txt  made_up.2pc.txt  no_more.2pc.txt  passion.2pc.txt  picture.2pc.txt  ratha_be.2pc.txt  shorty.2pc.txt  skandal.2pc.txt  streetz.2pc.txt  we_ride.2pc.txt
Lyrics/ohhla.com/anonymous/2_pac/greatest/: godbless.2pc.txt  uncolove.2pc.txt
Lyrics/ohhla.com/anonymous/2_pac/hitemup2/: 4_niggaz.2pc.txt  hitemup2.2pc.txt
Lyrics/ohhla.com/anonymous/aesoprck/: index.html
archive/: README.md
data/: posts.json
rapwords/: cli.py  config.py  models.py
rapwords/content/: store.py
rapwords/discover/: bars.py  definitions.py  lyrics.py  words.py  youtube.py
rapwords/scraper/: tumblr.py
rapwords/video/: align.py  captions.py  downloader.py  processor.py  subtitles.py
(+1650 files in other folders)
